fixed z-index on moodIcon conflicting with appearance and settings panels. positioned starlight count and sharing options bar over image on show entry

--- a/app/sass/shared.sass
+++ b/app/sass/shared.sass
@@ -458,7 +458,8 @@ a:active, a:focus
   +round(8)
   right: 45px
   top: 64px
-  width: 334px 
+  width: 334px
+  z-index: 1400
 
   .arrow
     +relative
